[package]
name = "stats_server"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.1", features = ["tls"] }
uuid = "0.8.2"
serde = "1.0.129"
serde_derive = "1.0.129"
serde_json = "1.0.66"
clap = "2.33.3"
colored = "2.0.0"
chrono = "0.4.19"
futures = "0.3.16"